fixed it once again (button wasn't displaying on tablet)

--- a/css/style.css
+++ b/css/style.css
@@ -359,6 +359,7 @@ button {display: none;}
     /*#shown {display: inline}*/
 
    button {
+        display: block;
         margin-top: 10px;
         margin-left: 40px;
         text-align: center;
